2000-02-12  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/selfaddrs.c:
	    In *addition* to interface picked addresses, collect also
	    z-environment defined  SELFADDRESSES=  listed addresses.
	    (For the support of an ETRN-CLUSTER.)

	* transports/smtp/smtp.c:
	    A read timeout at response wait after write timeout is now
	    limited to 300 seconds.

	* smtpserver/Makefile.in, smtpserver/smtpserver.h,
	  smtpserver/cfgread.c, smtpserver/smtpserver.c,
	  smtpserver/smtpcmds.c, smtpserver/smtpetrn.c, SiteConfig.in,
	  proto/smtpserver.conf.in, doc/guides/etrn-cluster:
	    Some initial work for an ETRN-CLUSTER.

2000-02-08  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* man/smtpserver.8, smtpserver/smtpserver.h, smtpserver/smtpserver.c,
	  smtpserver/smtpdata.c, smtpserver/smtpcmds.c, smtpserver/smtpauth.c:
	    Created smtpserver runtime command-line option "-l SYSLOG",
	    which is a magic thing to send logfile material through syslog()
	    facility.  Beware there is *huge* amount of dataflow there!
	    Some updates to smtpserver.8 man-page.

2000-02-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c, lib/taspoolid.c:
	    Changed (again) the logtag prefix for smtpserver's -l parameter
	    defined logfile.  Considering enabling it to be also diverted
	    via syslog() to where-ever that goes.  (But server process can
	    have only one syslog() session active with one facility..)

2000-02-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c, transports/smtp/smtptls.c:
	    Grumble...  Still seeing wrong kind of timeouts..

2000-02-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    An oddball log error - misreported outwritten message header
	    size into smtp client's log file.

	* README.UPGRADING, include/mail.h.in, scheduler/scheduler.c,
	  transports/libta/markoff.c:
	    Prepared for adding _CF_MIMESTRUCT multiline entity into
	    the TA-specsfile.  It will contain preparsed result of what